# openapi.yaml
@@ -1,16 +1,20 @@
 openapi: 3.0.0
 info:
-  title: Django Friends API
+  title: Friends API
   version: 1.0.0
-servers:
-  - url: http://localhost:8000/api/v1
 paths:
-  /users:
+  /:
+    get:
+      summary: Первая страница на которую попадает пользователь
+      responses:
+        '200':
+          description: OK
+  /users/log_in:
     post:
-      summary: Регистрация нового пользователя
+      summary: Контроллер для обработки запросов на вход пользователя
       requestBody:
         content:
-          application/json:
+          application/x-www-form-urlencoded:
             schema:
               type: object
               properties:
@@ -19,467 +23,225 @@ paths:
               required:
                 - username
       responses:
-        '201':
-          description: Пользователь успешно создан
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  username:
-                    type: string
-        '400':
-          description: Некорректный запрос
-    get:
-      summary: Получение списка всех пользователей
-      responses:
         '200':
-          description: Список пользователей
+          description: OK
           content:
-            application/json:
+            text/html:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    username:
-                      type: string
-        '404':
-          description: Не найдено ни одного пользователя
-  /users/{user_id}:
-    get:
-      summary: Получение информации о конкретном пользователе
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя
-      responses:
-        '200':
-          description: Информация о пользователе
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  username:
-                    type: string
-        '404':
-          description: Пользователь не найден
-  /users/{user_id}/friend-requests/outgoing:
-    get:
-      summary: Получение списка исходящих заявок в друзья для пользователя
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя
-      responses:
-        '200':
-          description: Список исходящих заявок в друзья
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    from_user_id:
-                      type: integer
-                    to_user_id:
-                      type: integer
-        '404':
-          description: Пользователь не найден
+                type: string
+                example: HTML content
+  /users/register:
     post:
-      summary: Отправка заявки в друзья
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя, которому отправляется заявка
+      summary: Страница для регистрации пользователя
       requestBody:
         content:
-          application/json:
+          application/x-www-form-urlencoded:
             schema:
               type: object
               properties:
-                from_user_id:
-                  type: integer
+                username:
+                  type: string
               required:
-                - from_user_id
+                - username
       responses:
-        '201':
-          description: Заявка в друзья успешно отправлена
+        '200':
+          description: OK
           content:
-            application/json:
+            text/html:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  from_user_id:
-                    type: integer
-                  to_user_id:
-                    type: integer
-        '400':
-          description: Некорректный запрос
-        '404':
-          description: Пользователь не найден
-  /users/{user_id}/friend-requests/incoming:
+                type: string
+                example: HTML content
+  /users/{user_id}/user_page:
     get:
-      summary: Получение списка входящих заявок в друзья для пользователя
+      summary: Контроллер для основной страницы пользователя
       parameters:
         - in: path
           name: user_id
-          required: true
           schema:
             type: integer
-          description: Идентификатор пользователя
+          required: true
       responses:
         '200':
-          description: Список входящих заявок в друзья
+          description: OK
           content:
-            application/json:
+            text/html:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    from_user_id:
-                      type: integer
-                    to_user_id:
-                      type: integer
-        '404':
-          description: Пользователь не найден
-
-  /users/{user_id}/friend-requests/{friend_request_id}:
-    put:
-      summary: Принятие заявки в друзья
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя, принимающего заявку
-        - in: path
-          name: friend_request_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор заявки в друзья
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                accepted:
-                  type: boolean
-              required:
-                - accepted
-      responses:
-        '200':
-          description: Заявка в друзья успешно принята/отклонена
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  from_user_id:
-                    type: integer
-                  to_user_id:
-                    type: integer
-                  accepted:
-                    type: boolean
-        '400':
-          description: Некорректный запрос
-        '404':
-          description: Пользователь или заявка в друзья не найдены
-
-  /users/{user_id}/friends:
+                type: string
+                example: HTML content
+  /users/{user_id}/friend_list:
     get:
-      summary: Получение списка друзей пользователя
+      summary: Контроллер для странички отображающей всех друзей пользователя
       parameters:
         - in: path
           name: user_id
-          required: true
           schema:
             type: integer
-          description: Идентификатор пользователя
+          required: true
       responses:
         '200':
-          description: Список друзей
+          description: OK
           content:
-            application/json:
+            text/html:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    username:
-                      type: string
-        '404':
-          description: Пользователь не найден
-    delete:
-      summary: Удаление друга
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя, удаляющего друга
-        - in: query
-          name: friend_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор друга, которого нужно удалить
-      responses:
-        '204':
-          description: Друг успешно удален
-        '400':
-          description: Некорректный запрос
-        '404':
-          description: Пользователь или друг не найден
-  /users/{user_id}/friend-status:
+                type: string
+                example: HTML content
+  /users/{user_id}/friend-requests:
     get:
-      summary: Получение статуса дружбы с другим пользователем
+      summary: Контроллер для странички отображающей все запросы в друзья
       parameters:
         - in: path
           name: user_id
-          required: true
           schema:
             type: integer
-          description: Идентификатор пользователя
-        - in: query
-          name: friend_id
           required: true
-          schema:
-            type: integer
-          description: Идентификатор другого пользователя
       responses:
         '200':
-          description: Статус дружбы
+          description: OK
           content:
-            application/json:
+            text/html:
               schema:
-                type: object
-                properties:
-                  friendship_status:
-                    type: string
-                    enum: ['Нет ничего', 'Есть исходящая заявка', 'Есть входящая заявка', 'Уже друзья']
-        '400':
-          description: Некорректный запрос
-        '404':
-          description: Пользователь или друг не найден
-
-  /users/{user_id}/friends/requests:
-    get:
-      summary: Получение списка всех заявок в друзья для пользователя
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя
-      responses:
-        '200':
-          description: Список всех заявок в друзья для пользователя
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    from_user_id:
-                      type: integer
-                    to_user_id:
-                      type: integer
-                    accepted:
-                      type: boolean
-        '404':
-          description: Пользователь не найден
-
-  /users/{user_id}/friends/auto-add:
+                type: string
+                example: HTML content
+  /users/{user_id}/{friend_id}/withdraw:
     post:
-      summary: Добавление друзей автоматически
+      summary: Контроллер для кнопки отклонения заявки в друзья
       parameters:
         - in: path
           name: user_id
-          required: true
           schema:
             type: integer
-          description: Идентификатор пользователя, которому нужно добавить друзей
+          required: true
+        - in: path
+          name: friend_id
+          schema:
+            type: integer
+          required: true
       responses:
         '200':
-          description: Друзья успешно добавлены
-        '400':
-          description: Некорректный запрос
-        '404':
-          description: Пользователь не найден
-    delete:
-      summary: Отмена добавления друзей автоматически
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя, у которого нужно отменить добавление друзей
-      responses:
-        '204':
-          description: Добавление друзей успешно отменено
-        '404':
-          description: Пользователь не найден
-
-  /users/{user_id}/friend-requests/incoming:
-    get:
-      summary: Получение списка входящих заявок в друзья для пользователя
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор пользователя
-      responses:
-        '200':
-          description: Список входящих заявок в друзья
+          description: OK
           content:
-            application/json:
-/users/{user_id}/friends/{friend_id}:
-  delete:
-  summary: Удаление друга
-  parameters:
-  - in: path
-  name: user_id
-  required: true
-  schema:
-  type: integer
-  description: Идентификатор пользователя
-  - in: path
-  name: friend_id
-  required: true
-  schema:
-  type: integer
-  description: Идентификатор другого пользователя
-  responses:
-  '204':
-  description: Друг успешно удален
-  '404':
-  description: Пользователь или друг не найден
-  /users/{user_id}/friends:
-  get:
-  summary: Получение списка друзей пользователя
-  parameters:
-  - in: path
-  name: user_id
-  required: true
-  schema:
-  type: integer
-  description: Идентификатор пользователя
-  responses:
-  '200':
-  description: Список друзей пользователя
-  content:
-  application/json:
-  schema:
-  type: array
-  items:
-  type: object
-  properties:
-  id:
-  type: integer
-  username:
-  type: string
-  '404':
-  description: Пользователь не найден
-  
-  
+            text/html:
+              schema:
+                type: string
+                example: HTML content
+  /users/{user_id}/{friend_id}/{accepted}/add-friend/:
+    post:
+      summary: Контроллер для добавления в друзья пользователя
+      parameters:
+        - in: path
+          name: user_id
+          schema:
+            type: integer
+          required: true
+        - in: path
+          name: friend_id
+          schema:
+            type: integer
+          required: true
+        - in: path
+          name: accepted
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            text/html:
+              schema:
+                type: string
+                example: HTML content
+  /users/{user_id}/{friend_id}/remove-friend:
+    post:
+      summary: Контроллер для кнопки удаления друга
+      parameters:
+        - in: path
+          name: user_id
+          schema:
+            type: integer
+          required: true
+        - in: path
+          name: friend_id
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            text/html:
+              schema:
+                type: string
+                example: HTML content
+  /404:
+    get:
+      summary: Если страница не найдена (404)
+      responses:
+        '404':
+          description: Not Found
+          content:
+            text/html:
+              schema:
+                type: string
+                example: HTML content
+  /500:
+    get:
+      summary: Если ошибка сервера (500)
+      responses:
+        '500':
+          description: Internal Server Error
+          content:
+            text/html:
+              schema:
+                type: string
+                example: HTML content
 components:
   schemas:
     User:
-    type: object
-    properties:
-  id:
-  type: integer
-  username:
-  type: string
-  
-  FriendRequest:
-  type: object
-  properties:
-    id:
-      type: integer
-    from_user_id:
-      type: integer
-    to_user_id:
-      type: integer
-    accepted:
-      type: boolean
-      
-     
-  InvalidRequestError:
-    allOf:
-      - $ref: '#/components/schemas/Error'
-      - type: object
-        properties:
-          message:
-            type: string
-            description: Причина ошибки
+      type: object
+      required:
+        - id
+        - username
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 4
+        username:
+          type: string
+          example: "Илья"
 
-  NotFoundError:
-    allOf:
-      - $ref: '#/components/schemas/Error'
-      - type: object
-        properties:
-          message:
-            type: string
-            description: Причина ошибки
-
-  AuthError:
-    allOf:
-      - $ref: '#/components/schemas/Error'
-      - type: object
-        properties:
-          message:
-            type: string
-            description: Причина ошибки
-
-  ServerError:
-    allOf:
-      - $ref: '#/components/schemas/Error'
-      - type: object
-        properties:
-          message:
-            type: string
-            description: Причина ошибки
+    FriendShip:
+      type: object
+      required:
+        - user_id
+        - friend_id
+        - created_at
+      properties:
+        user_id:
+          type: integer
+          format: int64
+          example: 4
+        friend_id:
+          type: integer
+          example: 4
+        created_at:
+          type: string
+          format: 2023-10-10-01T15:00:00+01
 
 
-    
+    FriendRequest:
+      type: object
+      required:
+        - from_user
+        - to_user
+        - accepted
+      properties:
+        from_user:
+          type: integer
+          example: 4
+        to_user:
+          type: integer
+        accepted:
+          type: string
+          example: "True"
